# fluxforge

./: .dockerignore  .env.aws.example  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile.server  Dockerfile.web  LICENSE  README.md  SETUP_GUIDE.md  TDD.md  docker-compose.prod.yml  docker-compose.yml  mock-server-package.json  mock-server.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  push_to_github.sh
.claude/: settings.local.json
.github/workflows/: build-installer.yml  build-web.yml  ci.yml
PITauri/: index.html  package.json  vite.config.js
PITauri/src/: App.vue  main.js
PITauri/src-tauri/: Cargo.toml  tauri.conf.json
PITauri/src-tauri/capabilities/: default.json
PITauri/src-tauri/icons/: icon.icns
PITauri/src-tauri/src/: lib.rs  main.rs
PITauri/src/api/: tauri.js
PITauri/src/components/: ComponentsPage.vue  DesignPage.vue  FilesPage.vue  HelpPage.vue  MagneticsPage.vue  SettingsPage.vue  (+1 more)
PIWeb/: .env.example  index.html  package.json  vite.config.js
PIWeb/src/: App.vue  main.js
cursor/: .cursorrules  README.md  ai-workflow.md  architecture.md  build-history.md  engineering-rules.md  handoff-template.md  poc-running.md  session-start.md  workflow.md
docs/: README.md  ai-workflow.md  architecture.md  engineering-rules.md  poc-running.md  workflow.md
nginx/: default.conf
scripts/: bootstrap-ec2.sh  build-installer.sh  build-web.sh  deploy-aws.sh  deploy-local.sh  setup-and-deploy.sh
server/: index.js  package.json
tests/: README.md  core-logic.test.js  server-api.test.js  sim-engine.test.js  uds-schema.test.js
(+10 files in other folders)
