[package]
name    = "fluxforge"
version = "1.0.0"
edition = "2021"

# Required by tauri-build
[package.metadata.tauri]
features = []

[lib]
name       = "fluxforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
tauri      = { version = "2.1", features = [] }
serde      = { version = "1",   features = ["derive"] }
serde_json = "1"
rusqlite   = { version = "0.31", features = ["bundled"] }

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true
